[UPDATE] modified to act as a replacement 'nfs' plugin
This fixes issues with most 'providers' eg. parallels

--- a/example_box/Vagrantfile
+++ b/example_box/Vagrantfile
@@ -40,7 +40,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
   config.vm.synced_folder '.', '/vagrant', disabled: true
-  config.vm.synced_folder './vagrant_share', '/vagrant', type: 'nfs_guest'
+  config.vm.synced_folder './vagrant_share', '/vagrant', type: 'nfs'
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
