--- a/example_box/Vagrantfile
+++ b/example_box/Vagrantfile
@@ -14,13 +14,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
   config.vm.network "private_network", ip: "192.168.55.10"
+  #config.vm.network "public_network"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   config.vm.synced_folder '.', '/vagrant', disabled: true
-
   config.vm.synced_folder './vagrant_share', '/vagrant', type: 'nfs_guest'
+  #config.vm.synced_folder './vagrant_share', '/vagrant', type: 'nfs'
 
 end
