--- a/example_box/Vagrantfile
+++ b/example_box/Vagrantfile
@@ -21,7 +21,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   config.vm.synced_folder '.', '/vagrant', disabled: true
-  config.vm.synced_folder './vagrant_share', '/vagrant', create: true, type: 'nfs_guest'
+  config.vm.synced_folder './vagrant_share', '/vagrant', create: true, type: 'nfs_guest', disabled: false
   #config.vm.synced_folder './vagrant_share', '/vagrant', type: 'nfs'
 
 end
